d-flex style changed to flex direction column to prevent text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,12 @@
     flex-direction: column;
   }
 
+  @media (max-width: 600px) {
+    .d-flex {
+      flex-direction: column;
+    }
+  }
+
   .nav-circle {
     position: sticky;
     left: 0;
